# dw

./: todo.txt
server/battle_server/: CMakeLists.txt  main.cpp  zyzr_frame.vcxproj  zyzr_frame.vcxproj.filters
server/battle_server/protocol/: battle_generated.h  check_generated.h  common_generated.h  dev_ob_generated.h  framecmd_c2c_generated.h  framecmd_c2s_generated.h  framesync_generated.h  friend_generated.h  guid_generated.h  inter_generated.h  inter_proto.pb.cc  inter_proto.pb.h  lobby_generated.h  login_generated.h  match_generated.h  msg_error_generated.h  robot_generated.h
server/battle_server/src/: Battle.cpp  Battle.h  BattleConfig.cpp  BattleConfig.h  BattleManager.cpp  BattleManager.h  BattleResult.cpp  BattleResult.h  BattleRole.h  BattleSetting.h  BattleTeam.cpp  BattleTeam.h  BattleType.h  EmptyMsg.h  ManageClientValidation.cpp  ManageClientValidation.h  ManageStat.cpp  ManageStat.h  ManageTrSession.cpp  ManageTrSession.h  ManagerSession.cpp  ManagerSession.h  MessageMaker.cpp  MessageMaker.h  PackMsg.cpp  PackMsg.h  Player.cpp  Player.h  PlayerManager.cpp  PlayerManager.h  ProtocolBuilder.cpp  ProtocolBuilder.h  Redirect.cpp  Redirect.h  StatCount.cpp  StatCount.h  StatTime.cpp  StatTime.h  main.cpp  opcode.h
server/battle_server/tools/: BattleLog.h  ManageDbPing.cpp  ManageDbPing.h  ManageSingleton.cpp  ManageSingleton.h  ManageState.h  MessagePump.cpp  MessagePump.h  MessagePumpImp.h  MyGuidDef.h  Packet.cpp  Packet.h  PacketHandle.h  Singleton.h  check_macro.h  get_entity_macro.h
server/battle_server/x64/Debug/: battle_config.xml  battle_setting.xml
server/devob_server/: devob_server.vcxproj  devob_server.vcxproj.filters
server/devob_server/src/: ManageBattleSession.cpp  ManageBattleSession.h  ManageClientSession.cpp  ManageClientSession.h  ManageMatch.cpp  ManageMatch.h  MatchCell.cpp  MatchCell.h  MessageMaker.cpp  MessageMaker.h  ObConfig.cpp  ObConfig.h  main.cpp
server/devob_server/x64/Debug/: devob_config.xml
server/friend_server/: friend_server.vcxproj  friend_server.vcxproj.filters
server/friend_server/src/: FriendConfig.cpp  FriendConfig.h  ManageDB.cpp  ManageDB.h  ManageSummoner.cpp  ManageSummoner.h  ManageVrSession.cpp  ManageVrSession.h  MessageMaker.cpp  MessageMaker.h  Summoner.cpp  Summoner.h  common_define.h  friend_server.cpp
server/friend_server/x64/Debug/: friend_config.xml
server/gate_server/: CMakeLists.txt  gate_server.vcxproj  gate_server.vcxproj.filters
server/gate_server/src/: GateConfig.cpp  GateConfig.h  ManageClientPing.cpp  ManageClientPing.h  ManageClientSession.cpp  ManageClientSession.h  ManageServerSession.cpp  ManageServerSession.h  main.cpp
server/gate_server/x64/Debug/: gate_config.xml
server/guidsys/: CMakeLists.txt  guidsys.vcxproj  guidsys.vcxproj.filters
server/guidsys/inc/: MakeGuid.cpp  MakeGuid.h
server/guidsys/src/: AllocGuid.cpp  AllocGuid.h  ManageConfig.cpp  ManageConfig.h  ManageSession.cpp  ManageSession.h  guidsys.cpp
server/guidsys/x64/Debug/: guid_config.xml
server/plugins/FRSystemVR/: CMakeLists.txt  FRSystemVR.vcxproj  FRSystemVR.vcxproj.filters
server/plugins/FRSystemVR/src/: FRSystemVR.cpp  FRSystemVR.h
server/plugins/PlayerLoginVR/: CMakeLists.txt  PlayerLoginVR.vcxproj  PlayerLoginVR.vcxproj.filters
server/plugins/PlayerLoginVR/src/: PlayerLoginVR.cpp  PlayerLoginVR.h
server/plugins/TrSystem/: CMakeLists.txt  TrSystemVr.vcxproj  TrSystemVr.vcxproj.filters
server/plugins/TrSystem/src/: TrSystemVR.cpp  TrSystemVR.h
server/plugins/demoSystem/: demoSystem.vcxproj  demoSystem.vcxproj.filters
server/plugins/demoSystem/vr/: demoSystemVR.h  demoSystermVR.cpp
server/tr_server/: CMakeLists.txt  tr.vcxproj  tr.vcxproj.filters
server/tr_server/src/: ManageBattleSession.cpp  ManageBattleSession.h  ManageMatch.cpp  ManageMatch.h  ManagePlayerTrInfo.cpp  ManagePlayerTrInfo.h  ManageVrSession.cpp  ManageVrSession.h  MatchBattle.cpp  MatchBattle.h  MatchCell.cpp  MatchCell.h  MatchQueue.cpp  MatchQueue.h  MessageMaker.cpp  MessageMaker.h  PlayerTrInfo.cpp  PlayerTrInfo.h  TrConfig.cpp  main.cpp
server/tr_server/x64/Debug/: tr_config.xml
server/vr_server/: CMakeLists.txt  vr.vcxproj  vr.vcxproj.filters
server/vr_server/src/: Account.cpp  Account.h  BaseFunc.cpp  BaseFunc.h  ClientMessageManager.cpp  ClientMessageManager.h  ManageAccount.cpp  ManageAccount.h  ManageClientMsgPump.cpp  ManageClientMsgPump.h  ManageClientPacket.cpp  ManageClientPacket.h  ManageDB.cpp  ManageDB.h  ManageFriendMsgPump.cpp  ManageFriendMsgPump.h  ManageFriendSession.cpp  ManageFriendSession.h  ManageSummoner.cpp  ManageSummoner.h  ManageTrMsgPump.cpp  ManageTrMsgPump.h  ManageTrSession.cpp  ManageTrSession.h  ManageVrpublicMessage.cpp  ManageVrpublicMessage.h  ManageVrpublicMsgPump.cpp  ManageVrpublicMsgPump.h  ManageVrpublicPacket.cpp  ManageVrpublicPacket.h  ManageVrpublicSession.cpp  ManageVrpublicSession.h  ManagerClientSession.cpp  ManagerClientSession.h  MessageMaker.cpp  MessageMaker.h  Summoner.cpp  Summoner.h  VrConfig.cpp  VrConfig.h  (+2 more)
server/vr_server/x64/Debug/: vr_config.xml
server/vrpublic/: CMakeLists.txt  vrpublic.vcxproj  vrpublic.vcxproj.filters
server/vrpublic/src/: Account.cpp  Account.h  ClientMessageManager.cpp  ClientMessageManager.h  ManageAccount.cpp  ManageAccount.h  ManageClientPacket.cpp  ManageClientPacket.h  ManageServerList.cpp  ManageServerList.h  ManageVrPacket.cpp  ManageVrPacket.h  ManageVrSession.cpp  ManageVrSession.h  ManagerClientSession.cpp  ManagerClientSession.h  MessagePacker.cpp  MessagePacker.h  ServerInfo.cpp  ServerInfo.h  VrMessageManager.cpp  VrMessageManager.h  VrPublicConfig.cpp  VrPublicConfig.h  main.cpp  vrpublic.cpp
server/vrpublic/x64/Debug/: vrpublic_config.xml
